# microSched

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  fly.toml
agent-tasks/: 001-precommit-gitleaks.md  002-gitleaks-custom-rules.md  003-scaffold-backend.md  004-scaffold-frontend.md  005-docker-fly-deploy.md  006-neon-alembic-ddl.md  007-auth-oidc-session.md  008-task-slice.md  008a-crypto.md  008b-cd-fly-deploy.md  008d-security-review-fixes.md  README.md
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 0001_initial_schema.py  0002_note_title_private_ciphertext.py  0003_task_item_privacy_trigger.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py
backend/app/core/: crypto.py  database_urls.py  db.py  sessions.py  settings.py
backend/app/domain/: __init__.py  auth.py  models.py
backend/app/jobs/: __init__.py
backend/app/retrieval/: __init__.py
backend/app/web/: __init__.py  deps.py  oauth.py
backend/app/web/routers/: auth.py  cron.py  health.py  me.py
backend/scripts/: __init__.py  bootstrap_neon.py  check_migration_drift.py  check_migration_drops.py  measure_first_query.py  prepare_ci_database.py  verify_neon.py
backend/tests/: conftest.py  test_auth.py  test_bootstrap_neon.py  test_crypto.py  test_database_urls.py  test_health.py  test_schema_models.py  test_task_item_trigger.py  test_tasks_store.py
docs/: architecture-brief.md  auth-brief.md  cost-brief.md  db-and-data-model-brief.md  devops-brief.md  forward-spec.md  frontend-brief.md  learnings-applied.md  migration-mapping-brief.md  schema-physical-brief.md  schema-v1-brief.md  tracking-brief.md  upgrade-notes-inbox.md  v1-reference.md
frontend/: package-lock.json  package.json  vite.config.ts
harness-reports/: README.md
scripts/: inventory_old_stores.py
web_check/: 01-auto-stop-enabled.md  (+1 more)
(+10 files in other folders)
