[project]
name = "microsched-backend"
version = "0.1.0"
description = "FastAPI backend for microSched."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi",
    "pydantic-settings",
    "sqlmodel",
    "uvicorn",
]

[dependency-groups]
dev = [
    "httpx",
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
