[project]
name = "microsched-backend"
version = "0.1.0"
description = "FastAPI backend for microSched."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.5",
    "asyncpg>=0.31.0",
    "authlib>=1.6.0",
    "fastapi",
    # Runtime, not just test tooling: authlib.integrations.starlette_client imports
    # its httpx client at package-import time, so the app will not boot without it.
    "httpx>=0.28.0",
    "itsdangerous>=2.2.0",
    "pgvector>=0.5.0",
    "pydantic-settings",
    "sqlmodel",
    "uvicorn",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
